src/test/compile-fail/bad-alt.rs
// error-pattern: expected

fn main() {
  let int x = 5;
  alt x;
}
